--- a/client/package.json
+++ b/client/package.json
@@ -2,9 +2,16 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
+    "apollo-boost": "^0.1.12",
+    "graphql": "^0.13.2",
     "react": "^16.4.2",
+    "react-apollo": "^2.1.9",
     "react-dom": "^16.4.2",
+    "react-plyr": "^2.1.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
@@ -12,6 +19,5 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "proxy" : "http://localhost:5000"
+  }
 }
