--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "scripts": {
         "start": "node ./bin/www",
         "predeploy": "npm run build",
-        "deploy": "gh-pages -d build"
+        "deploy": "gh-pages -d build",
+        "heroku-postbuild": "cd client && npm install && npm run build"
     },
     "devDependencies": {
         "gh-pages": "^1.2.0"
