--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "react-plyr": "^2.1.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "sweetalert": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
