--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,12 @@
     "react-apollo": "^2.1.9",
     "react-dom": "^16.4.2",
     "react-plyr": "^2.1.1",
+    "react-responsive-modal": "^3.2.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "sweetalert": "^2.1.0"
+    "sweetalert": "^2.1.0",
+    "video-react": "^0.13.0"
   },
   "scripts": {
     "start": "react-scripts start",
